--- a/.github/workflows/pull-request-actions.yml
+++ b/.github/workflows/pull-request-actions.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
 permissions:
   contents: read
   id-token: write
@@ -62,6 +65,8 @@ jobs:
     name: Integration Test
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    env:
+      OPENAI_API_KEY: ${{ env.OPENAI_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
